# CMakeTutorialCXX20

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: publish-ci.yml  publish-nuget.yml
00CMake-3.29.2-2024.04-Office/Step1/: CMakeLists.txt  TutorialConfig.h.in
00CMake/00CMake-3.29.2-2024.04-Office/Step1/: tutorial.cxx
00CMake/01CMake-3.9.2-2024.4-Checkout/Step1/: CMakeLists.txt  TutorialConfig.h.in
00CMake/99CMake-3.29.2-withoutComment/Step1/: tutorial.cxx
00CMake/99CMake-3.29.2-withoutComment/Step2/: tutorial.cxx
00CMake/文档笔记整理/: 00操作教程.md
00Cmake-3.29.2-2024.04/Step1/: 00操作教程.md
01CMake-3.9.2-2024.4-Checkout/Step1/: tutorial.cxx
99CMake-3.29.2-withoutComment/Step2/: CMakeLists.txt
docs/: 00现代CMake教程.md  01GitHub Action yml文件编写.md  02 Git操作.md
include/Arithmetic/: arithmetic.h
src/: simple_example.cpp
src/Arithmetic/: add.cpp  div.cpp  mult.cpp  sub.cpp
tests/: CMakeLists.txt  configureDownexample.cpp
tutorial/ProfessionalCPPEdition6/Part1/Ch00/AirlineTicket/: AirlineTicketTest.cpp  CMakeLists.txt
tutorial/ProfessionalCPPEdition6/Part1/Ch00/AirlineTicket/module/: AirlineTicket.cpp  AirlineTicket.ixx
tutorial/algorithm/LeetCodeList/DataStructure/: README.md
tutorial/algorithm/LeetCodeList/ShiYanLou/: README.md
tutorial/cmake/cpp-master/cmake/doc/: cmake.md
util/: 填充.md
文档笔记整理/: CMake 保姆级教程（上）  爱编程的大丙.md
